fixing merge issues with MIFOSX-1024

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -13006,6 +13006,22 @@ Content-Type: application/json
 					<code class="method-response">{ "auditId": 1 } </code>
 				</div>
 			</div>
+			<a id="makercheckers_reject" name="makercheckers_approve" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Reject Maker Checker Entry</h4>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+PUT https://DomainName/api/v1/makercheckers/{auditId}
+					</code>
+					<code class="method-request">
+PUT makercheckers/1
+Content-Type: application/json
+					</code>
+					<code class="method-response">{ "auditId": 1 } </code>
+				</div>
+			</div>
                         
 			<a id="makercheckers_delete" name="makercheckers_delete" class="old-syle-anchor">&nbsp;</a>
 			<div class="method-section">
@@ -30534,7 +30550,15 @@ No Request Body:
                     <td></td>
                     <td></td>
                 </tr>
-				<tr>
+    			<tr>
+                    <td></td>
+                    <td>makercheckers/{auditId}</td>
+                    <td></td>
+                    <td></td>
+                    <td><a href="#makercheckers_reject">Reject Maker Checker Entry</a></td>
+                    <td></td>
+                </tr>
+            <tr>
 				<td><a href="#scheduler_jobs">Scheduler jobs</a></td>
 				<td>jobs</td>
 				<td></td>
