adding details of new optional field overdueDaysForNPA to loan product definition

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -8590,6 +8590,14 @@ An enumeration that indicates the type of transaction processing strategy to be 
 							</td>
 						</tr>
 						<tr class=alt>
+							<td>overdueDaysForNPA</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Optional: Integer - represents the maximum number of days a Loan may
+							be overdue before being classified as a NPA (non performing asset)
+							</td>
+						</tr>
+						<tr class=alt>
 							<td>accountingRule</td>
 						</tr>
 						<tr>
