MIFOSX-1163 : added functionality to transfer fixed deposit amount from savings account

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -18542,7 +18542,7 @@ No Request Body:
 	        <br/>
 	        <table class=matrixHeading>
 	            <tr class="matrixHeadingBG"><td><div class="mifosXHeading2">Optional Fields</div></td></tr>
-	            <tr class=alt><td>accountNo, externalId, fieldOfficerId</td></tr>
+	            <tr class=alt><td>accountNo, externalId, fieldOfficerId,linkAccountId</td></tr>
 	        </table>
 	        <br/>
 	        <table class=matrixHeading>
